--- a/training/name_generator.ipynb
+++ b/training/name_generator.ipynb
@@ -54,7 +54,7 @@
     "batch_size = 32    # Data samples in each training step\n",
     "latent_dim = 64    # Size of our LSTM\n",
     "dropout_rate = 0.2 # Regularization with dropout\n",
-    "model_path = os.path.realpath('./poke_gen_model.h5') # Location for the model\n",
+    "model_path = os.path.realpath('./model.h5') # Location for the model\n",
     "load_model = False # Enable loading model from disk\n",
     "store_model = True # Store model to disk after training\n",
     "verbosity = 1      # Print result for each epoch\n",
@@ -271,12 +271,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:From C:\\Users\\simon.larsson\\AppData\\Local\\Continuum\\anaconda3\\envs\\datascience\\lib\\site-packages\\tensorflow\\python\\framework\\op_def_library.py:263: colocate_with (from tensorflow.python.framework.ops) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Colocations handled automatically by placer.\n",
-      "WARNING:tensorflow:From C:\\Users\\simon.larsson\\AppData\\Local\\Continuum\\anaconda3\\envs\\datascience\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:3445: calling dropout (from tensorflow.python.ops.nn_ops) with keep_prob is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Please use `rate` instead of `keep_prob`. Rate should be set to `rate = 1 - keep_prob`.\n",
+      "Model: \"sequential_1\"\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
@@ -324,11 +319,214 @@
      "output_type": "stream",
      "text": [
       "Start training for 100 epochs\n",
-      "WARNING:tensorflow:From C:\\Users\\simon.larsson\\AppData\\Local\\Continuum\\anaconda3\\envs\\datascience\\lib\\site-packages\\tensorflow\\python\\ops\\math_ops.py:3066: to_int32 (from tensorflow.python.ops.math_ops) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Use tf.cast instead.\n",
-      "Finished training - time elapsed: 2.1919691920280457 min\n",
-      "Storing model at: C:\\Projects\\Github\\pokemon-name-generator\\poke_gen_model.h5\n"
+      "Epoch 1/100\n",
+      "6722/6722 [==============================] - 2s 236us/step - loss: 2.8115\n",
+      "Epoch 2/100\n",
+      "6722/6722 [==============================] - 1s 166us/step - loss: 2.5474\n",
+      "Epoch 3/100\n",
+      "6722/6722 [==============================] - 1s 143us/step - loss: 2.4659\n",
+      "Epoch 4/100\n",
+      "6722/6722 [==============================] - 1s 131us/step - loss: 2.4084\n",
+      "Epoch 5/100\n",
+      "6722/6722 [==============================] - 1s 140us/step - loss: 2.3534\n",
+      "Epoch 6/100\n",
+      "6722/6722 [==============================] - 1s 133us/step - loss: 2.3006\n",
+      "Epoch 7/100\n",
+      "6722/6722 [==============================] - 1s 142us/step - loss: 2.2499\n",
+      "Epoch 8/100\n",
+      "6722/6722 [==============================] - 1s 132us/step - loss: 2.2055\n",
+      "Epoch 9/100\n",
+      "6722/6722 [==============================] - 1s 125us/step - loss: 2.1553\n",
+      "Epoch 10/100\n",
+      "6722/6722 [==============================] - 1s 123us/step - loss: 2.1197\n",
+      "Epoch 11/100\n",
+      "6722/6722 [==============================] - 1s 123us/step - loss: 2.0794\n",
+      "Epoch 12/100\n",
+      "6722/6722 [==============================] - 1s 124us/step - loss: 2.0356\n",
+      "Epoch 13/100\n",
+      "6722/6722 [==============================] - 1s 125us/step - loss: 2.0054\n",
+      "Epoch 14/100\n",
+      "6722/6722 [==============================] - 1s 135us/step - loss: 1.9799\n",
+      "Epoch 15/100\n",
+      "6722/6722 [==============================] - 1s 126us/step - loss: 1.9553\n",
+      "Epoch 16/100\n",
+      "6722/6722 [==============================] - 1s 127us/step - loss: 1.9251\n",
+      "Epoch 17/100\n",
+      "6722/6722 [==============================] - 1s 126us/step - loss: 1.9167\n",
+      "Epoch 18/100\n",
+      "6722/6722 [==============================] - 1s 127us/step - loss: 1.8969\n",
+      "Epoch 19/100\n",
+      "6722/6722 [==============================] - 1s 125us/step - loss: 1.8748\n",
+      "Epoch 20/100\n",
+      "6722/6722 [==============================] - 1s 127us/step - loss: 1.8462\n",
+      "Epoch 21/100\n",
+      "6722/6722 [==============================] - 1s 129us/step - loss: 1.8393\n",
+      "Epoch 22/100\n",
+      "6722/6722 [==============================] - 1s 129us/step - loss: 1.8320\n",
+      "Epoch 23/100\n",
+      "6722/6722 [==============================] - 1s 137us/step - loss: 1.8079\n",
+      "Epoch 24/100\n",
+      "6722/6722 [==============================] - 1s 135us/step - loss: 1.7999\n",
+      "Epoch 25/100\n",
+      "6722/6722 [==============================] - 1s 133us/step - loss: 1.7849\n",
+      "Epoch 26/100\n",
+      "6722/6722 [==============================] - 1s 136us/step - loss: 1.7664\n",
+      "Epoch 27/100\n",
+      "6722/6722 [==============================] - 1s 133us/step - loss: 1.7450\n",
+      "Epoch 28/100\n",
+      "6722/6722 [==============================] - 1s 138us/step - loss: 1.7395\n",
+      "Epoch 29/100\n",
+      "6722/6722 [==============================] - 1s 137us/step - loss: 1.7309\n",
+      "Epoch 30/100\n",
+      "6722/6722 [==============================] - 1s 137us/step - loss: 1.7131\n",
+      "Epoch 31/100\n",
+      "6722/6722 [==============================] - 1s 133us/step - loss: 1.7059\n",
+      "Epoch 32/100\n",
+      "6722/6722 [==============================] - 1s 139us/step - loss: 1.6971\n",
+      "Epoch 33/100\n",
+      "6722/6722 [==============================] - 1s 144us/step - loss: 1.6896\n",
+      "Epoch 34/100\n",
+      "6722/6722 [==============================] - 1s 140us/step - loss: 1.6752\n",
+      "Epoch 35/100\n",
+      "6722/6722 [==============================] - 1s 151us/step - loss: 1.6648\n",
+      "Epoch 36/100\n",
+      "6722/6722 [==============================] - 1s 148us/step - loss: 1.6393\n",
+      "Epoch 37/100\n",
+      "6722/6722 [==============================] - 1s 128us/step - loss: 1.6419\n",
+      "Epoch 38/100\n",
+      "6722/6722 [==============================] - 1s 127us/step - loss: 1.6389\n",
+      "Epoch 39/100\n",
+      "6722/6722 [==============================] - 1s 125us/step - loss: 1.6176\n",
+      "Epoch 40/100\n",
+      "6722/6722 [==============================] - 1s 129us/step - loss: 1.6127\n",
+      "Epoch 41/100\n",
+      "6722/6722 [==============================] - 1s 135us/step - loss: 1.6028\n",
+      "Epoch 42/100\n",
+      "6722/6722 [==============================] - 1s 125us/step - loss: 1.6041\n",
+      "Epoch 43/100\n",
+      "6722/6722 [==============================] - 1s 130us/step - loss: 1.5995\n",
+      "Epoch 44/100\n",
+      "6722/6722 [==============================] - 1s 137us/step - loss: 1.5903\n",
+      "Epoch 45/100\n",
+      "6722/6722 [==============================] - 1s 136us/step - loss: 1.5758\n",
+      "Epoch 46/100\n",
+      "6722/6722 [==============================] - 1s 133us/step - loss: 1.5748\n",
+      "Epoch 47/100\n",
+      "6722/6722 [==============================] - 1s 130us/step - loss: 1.5668\n",
+      "Epoch 48/100\n",
+      "6722/6722 [==============================] - 1s 136us/step - loss: 1.5443\n",
+      "Epoch 49/100\n",
+      "6722/6722 [==============================] - 1s 130us/step - loss: 1.5638\n",
+      "Epoch 50/100\n",
+      "6722/6722 [==============================] - 1s 134us/step - loss: 1.5295\n",
+      "Epoch 51/100\n",
+      "6722/6722 [==============================] - 1s 128us/step - loss: 1.5372\n",
+      "Epoch 52/100\n",
+      "6722/6722 [==============================] - 1s 133us/step - loss: 1.5123\n",
+      "Epoch 53/100\n",
+      "6722/6722 [==============================] - 1s 135us/step - loss: 1.5127\n",
+      "Epoch 54/100\n",
+      "6722/6722 [==============================] - 1s 135us/step - loss: 1.5237\n",
+      "Epoch 55/100\n",
+      "6722/6722 [==============================] - 1s 129us/step - loss: 1.5042\n",
+      "Epoch 56/100\n",
+      "6722/6722 [==============================] - 1s 126us/step - loss: 1.5072\n",
+      "Epoch 57/100\n",
+      "6722/6722 [==============================] - 1s 127us/step - loss: 1.4939\n",
+      "Epoch 58/100\n",
+      "6722/6722 [==============================] - 1s 128us/step - loss: 1.4894\n",
+      "Epoch 59/100\n",
+      "6722/6722 [==============================] - 1s 126us/step - loss: 1.4884\n",
+      "Epoch 60/100\n",
+      "6722/6722 [==============================] - 1s 126us/step - loss: 1.4764\n",
+      "Epoch 61/100\n",
+      "6722/6722 [==============================] - 1s 125us/step - loss: 1.4762\n",
+      "Epoch 62/100\n",
+      "6722/6722 [==============================] - 1s 126us/step - loss: 1.4735\n",
+      "Epoch 63/100\n",
+      "6722/6722 [==============================] - 1s 126us/step - loss: 1.4608\n",
+      "Epoch 64/100\n",
+      "6722/6722 [==============================] - 1s 128us/step - loss: 1.4731\n",
+      "Epoch 65/100\n",
+      "6722/6722 [==============================] - 1s 126us/step - loss: 1.4639\n",
+      "Epoch 66/100\n",
+      "6722/6722 [==============================] - 1s 133us/step - loss: 1.4665\n",
+      "Epoch 67/100\n",
+      "6722/6722 [==============================] - 1s 143us/step - loss: 1.4631\n",
+      "Epoch 68/100\n",
+      "6722/6722 [==============================] - 1s 139us/step - loss: 1.4399\n",
+      "Epoch 69/100\n",
+      "6722/6722 [==============================] - 1s 133us/step - loss: 1.4565\n",
+      "Epoch 70/100\n",
+      "6722/6722 [==============================] - 1s 150us/step - loss: 1.4307\n",
+      "Epoch 71/100\n",
+      "6722/6722 [==============================] - 1s 149us/step - loss: 1.4173\n",
+      "Epoch 72/100\n",
+      "6722/6722 [==============================] - 1s 148us/step - loss: 1.4418\n",
+      "Epoch 73/100\n",
+      "6722/6722 [==============================] - 1s 139us/step - loss: 1.4201\n",
+      "Epoch 74/100\n",
+      "6722/6722 [==============================] - 1s 125us/step - loss: 1.4180\n",
+      "Epoch 75/100\n",
+      "6722/6722 [==============================] - 1s 138us/step - loss: 1.4190\n",
+      "Epoch 76/100\n",
+      "6722/6722 [==============================] - 1s 149us/step - loss: 1.4087\n",
+      "Epoch 77/100\n",
+      "6722/6722 [==============================] - 1s 160us/step - loss: 1.4200\n",
+      "Epoch 78/100\n",
+      "6722/6722 [==============================] - 1s 145us/step - loss: 1.4151\n",
+      "Epoch 79/100\n",
+      "6722/6722 [==============================] - 1s 129us/step - loss: 1.4064\n",
+      "Epoch 80/100\n",
+      "6722/6722 [==============================] - 1s 147us/step - loss: 1.4057\n",
+      "Epoch 81/100\n",
+      "6722/6722 [==============================] - 1s 149us/step - loss: 1.3838\n",
+      "Epoch 82/100\n",
+      "6722/6722 [==============================] - 1s 144us/step - loss: 1.3875\n",
+      "Epoch 83/100\n",
+      "6722/6722 [==============================] - 1s 135us/step - loss: 1.3678\n",
+      "Epoch 84/100\n",
+      "6722/6722 [==============================] - 1s 134us/step - loss: 1.3856\n",
+      "Epoch 85/100\n",
+      "6722/6722 [==============================] - 1s 135us/step - loss: 1.3788\n",
+      "Epoch 86/100\n",
+      "6722/6722 [==============================] - 1s 133us/step - loss: 1.3790\n",
+      "Epoch 87/100\n",
+      "6722/6722 [==============================] - 1s 136us/step - loss: 1.3956\n",
+      "Epoch 88/100\n",
+      "6722/6722 [==============================] - 1s 134us/step - loss: 1.3906\n",
+      "Epoch 89/100\n",
+      "6722/6722 [==============================] - 1s 135us/step - loss: 1.3724\n",
+      "Epoch 90/100\n",
+      "6722/6722 [==============================] - 1s 133us/step - loss: 1.3761\n",
+      "Epoch 91/100\n",
+      "6722/6722 [==============================] - 1s 132us/step - loss: 1.3672\n",
+      "Epoch 92/100\n",
+      "6722/6722 [==============================] - 1s 130us/step - loss: 1.3695\n",
+      "Epoch 93/100\n",
+      "6722/6722 [==============================] - 1s 136us/step - loss: 1.3717\n",
+      "Epoch 94/100\n",
+      "6722/6722 [==============================] - 1s 132us/step - loss: 1.3723\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 95/100\n",
+      "6722/6722 [==============================] - 1s 127us/step - loss: 1.3569\n",
+      "Epoch 96/100\n",
+      "6722/6722 [==============================] - 1s 133us/step - loss: 1.3578\n",
+      "Epoch 97/100\n",
+      "6722/6722 [==============================] - 1s 133us/step - loss: 1.3543\n",
+      "Epoch 98/100\n",
+      "6722/6722 [==============================] - 1s 129us/step - loss: 1.3494\n",
+      "Epoch 99/100\n",
+      "6722/6722 [==============================] - 1s 127us/step - loss: 1.3535\n",
+      "Epoch 100/100\n",
+      "6722/6722 [==============================] - 1s 129us/step - loss: 1.3539\n",
+      "Finished training - time elapsed: 1.5189442833264668 min\n",
+      "Storing model at: /Users/simonbachmann/Programming/pokemate/name-generator/training/model.h5\n"
      ]
     }
    ],
@@ -501,7 +699,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
